<resources>
    <string name="app_name">guide touristique</string>
    <string name="get_started">get started</string>
    <string name="textview">Welcome To Our app\n \n Uncover Korea, the land of captivating stories and flavorful cuisine</string>
    <string name="tourist_guide">Tourist Guide</string>
    <string name="getStarted_desp">Your pocket-sized travel companion for seamless navigation, curated recommendations, and unforgettable experiences.</string>
    <string name="description">Description</string>
    <string name="Seoul_text">Seoul, South Korea</string>
    <string name="entre_search">Enter your...</string>
    <string name="search">Search</string>
    <string name="Categories">Categories</string>
    <string name="Popular_hotel">Popular hotel</string>
    <string name="Popular_Restaurant">Popular Restaurant</string>
    <string name="Popular_Graden">Popular Garden</string>
    <string name="Popular_temple">Popular Temple</string>
    <string name="See_All">See All</string>
    <string name="text_hotel1">  Four Season Hotel</string>
    <string name="location_hotel1">Jongno-Gu, Seoul</string>
    <string name="text_hotel2">  Espace Hotel</string>
    <string name="location_hotel2">Jung-Gu</string>
    <string name="text_hotel3">  Ryse Hotel</string>
    <string name="location_hotel3"> Mapo-Gu </string>
    <string name="text_hotel4">Signiel Seoul</string>
    <string name="text_hotel5"> Sofitel Ambassador Seoul Hotel</string>
    <string name="text_restaurant1"> Daol Charcoal Grilll</string>
    <string name="location_restaurant1">Myeongdong 2-gol</string>
    <string name="text_restaurant2">  Flavors</string>
    <string name="location_restaurant2">sinbanpo-ro</string>
    <string name="text_restaurant3">  Odarijip Myeongdong</string>
    <string name="location_restaurant3">Mapo-Gu, Seoul</string>
    <string name="text_restaurant4">Wonjomanlgobchang</string>
    <string name="text_restaurant5">Mukshidonna Samcheongdong</string>
    <string name="text_graden1">  Namsan Outdoor </string>
    <string name="location_graden1">vulgok_ro</string>
    <string name="text_graden2"> Namsan Park</string>
    <string name="location_graden2">vulgok_ro</string>
    <string name="text_graden3">  Seoul Childrens </string>
    <string name="location_graden3">vulgok_ro</string>
    <string name="text_graden4">  Seoul Iris Garden </string>
    <string name="text_graden5">Seoul Station Rooftop Garden </string>
    <string name="text_temple1">  Hwagyesa</string>
    <string name="location_temple1">hwagyesa-gil</string>
    <string name="text_temple2"> Bongwonsal</string>
    <string name="location_temple2">Ujeonggok-re</string>
    <string name="text_temple3"> Jogyesa</string>
    <string name="location_temple3">ujeoagguk-ro</string>
    <string name="text_temple4">Bonjeunsa</string>
    <string name="text_temple5">Myeong-dong Cathedral</string>
    <string name="textviewhotel1">Four Seasons Hotel Seoul</string>
    <string name="detailshotel1">Just steps from Gwanghwamun Plaza, Four Seasons Hotel Seoul boasts commanding city views and features 5 in-house dining, a state-of-the art fitness facilities.</string>
    <string name="adresshotel1">97, Saemunan-ro, Jongno-gu, 03183 Séoul </string>
    <string name="contacthotel1">Contact Us on : 05566666666</string>
    <string name="textviewhotel2">Escape hotel</string>
    <string name="detailshotel2">The Escape Hotel is located in Seoul and offers a fitness center and a bar. The front desk is open 24/7. Guests can also enjoy a restaurant on-site. Free Wi-Fi is provided.</string>
    <string name="adresshotel2">67,Toegye-ro,Jung-gu,04529 Séoul</string>
    <string name="contacthotel2">Contact Us on : 05566666666</string>
    <string name="textviewhotel3">Ryse Hotel</string>
    <string name="detailshotel3">The RYSE, Autograph Collection Seoul is a hotel in the lively Hongdae area, near Hongik University subway station (Exit 9, with multiple lines). It offers free Wi-Fi and valet parking.</string>
    <string name="adresshotel3">130, Yanghwa-ro, Mapo-gu, 04038 Séoul</string>
    <string name="contacthotel3">Contact Us on : 05566666666</string>
    <string name="texthotel4">Signiel Seoul</string>
    <string name="detailshotel4">The Signiel Seoul, a 5-star hotel high in the Lotte World Tower, offers panoramic city views, fine dining, an indoor pool, and a gym. Its directly connected to the Jamsil subway station and provides free Wi-Fi.</string>
    <string name="adresshotel4">300, Olympic-ro, Songpa-gu, 05551 Seoul, South Korea</string>
    <string name="contacthotel4">Contact: +82-2-555-6666</string>
    <string name="texthotel5">Sofitel Ambassador Seoul Hotel</string>
    <string name="detailshotel5">luxurious 5-star hotel, blending French elegance with Korean hospitality near key attractions like Lotte World. It offers sophisticated rooms, diverse dining options, and excellent facilities</string>
    <string name="adresshotel5">09, Jamsil-ro, Songpa-gu,05552 Séoul</string>
    <string name="contacthotel5">Contact Us on : 05566666666</string>
    <string name="textviewres1">Daol Charcoal Grill</string>
    <string name="detailsres1">Daol Charcoal Grill Myeongdong Branch is a restaurant where you can taste representative K-food foods such as bulgogi, soybean paste stew and fresh food .</string>
    <string name="adressres1">54-2, Myeongdong 2-ga 1st And 2nd Floors, Séoul 04536 </string>
    <string name="contactres56">Contact Us on :+888888 </string>
    <string name="textrestau2">Flavors</string>
    <string name="detailsrestau2">Indulge in delicious global cuisine in a dynamic and stylish atmosphere while dining at Flavors. Our restaurant is located in the JW Marriott Hotel Soul and serves breakfast, lunch and dinner daily</string>
    <string name="adressrestau2">176 Sinbanpo-ro, Seocho-gu Séoul, Corée du Sud</string>
    <string name="contactrestau2">Contact Us on :+888888 </string>
    <string name="textrestau3">Odarijip Myeongdong</string>
    <string name="detailsrestau3">Located in the busiest area in Myeongdong, it provides a variety of menus includint most popular Korean food such as Galbi(beef), Samgyupsal(pork), Yukhoe(raw beef), Naengmyeon(cold noodle) and tteokbokki.</string>
    <string name="adressrestau3">2F, 28 Myeongdong 8na-gil, Jung District, Seoul, Corée du Sud </string>
    <string name="contactrestau3">Contact Us on :+888888 </string>
    <string name="textrestau4">Wonjomanlgobchang</string>
    <string name="detailsrestau4">Korean restaurants that specialize in soup with bean sprouts Vegetarian food and specialized in the food and naturalism. Using only pure ingredients that provide healthy fofood. Friendly staff and reasonable prices is a good thing. </string>
    <string name="adressrestau4"> 28, Myeongdong 8na-gil, Jung-gu 2F, Séoul 04536.</string>
    <string name="contactrestau4">Contact Us on :+888888 </string>
    <string name="textrestau5">Mukshidonna Samcheongdong</string>
    <string name="detailsrestaurant5">Samcheong-dong is famous for its Bukchon Hanok (Korean traditional houses) Village, surrounded by both Gyeongbokgung Palace and Changdeokgung Palace Many tourists come here to rent traditional Korean costume of Hanbok, walking around taking #OOTDs. It’s quite amusing to watch, really. Maybe one day I will get enough courage to do that </string>
    <string name="adressrestau5"> 74-7, Yulgok-ro 3-gil, Jongno-gu, Seoul 03061 South Korea.</string>
    <string name="contactrestau5">Contact Us on :+88477888 </string>
    <string name="textgarden1">Namsan Outdoor Botanical Garden</string>
    <string name="detailsgarden1">There are several entrances. One popular route is to pass the overpass next to Hotel Hyatt in Itaewon. Local bus #3 reaches here.\n\nLots of flowers. There are well-maintained pine forest, bamboo forest, pavilions, ponds, stream, benches, little outdoor gyms, observation deck, kids\' park, flower garden, etc.\n\n- It\'s possible to climb up the mountain through this garden.</string>
    <string name="adressgarden1">74-7, Yulgok-ro 3-gil, Jongno-gu, Seoul 03061 South Korea.</string>
    <string name="contactgarden1">Contact Us: +82-2-7788</string>
    <string name="textgarden2">Namsan Park</string>
    <string name="detailsgarden2">A must do if you’re in Seoul but you have to walk it!! It only takes 45 minutes (one way) and it’s not too steep. As you get higher and higher, you’ll be stunned with amazing views of the city and beautiful autumn trees. Head for the cable car entrance and turn right, there’s a big brick wall called the Seoul city limit which you can follow all the way up to the top of the mountain and to the tower. A really nice way to spend a couple of hours as the afternoon turns into the evening</string>
    <string name="adressgarden2"> 74-7, Yulgok-ro 3-gil, Jongno-gu, Seoul 03061 South Korea.</string>
    <string name="contactgarden2">Contact Us on :+88477888 </string>
   <string name="textgarden3">Seoul Children s Grand Park</string>
   <string name="detailsgarden3">This park has it all: rides, a zoo, a park, and a concert hall. Make sure to check out the most popular event: a dazzling water-fountain music and lights show.</string>
   <string name="adressgarden3"> 74-7, Yulgok-ro 3-gil, Jongno-gu, Seoul 03061 South Korea.</string>
   <string name="contactgarden3">Contact Us on :+88477888 </string>
    <string name="textgarden4">Seoul Iris Garden</string>
    <string name="detailsgarden4">This is a nice park for neighbors. Not recommended to visit for tourists because the location is quite suburb of the city.
        -there are water showers for kids, sports courts, etc..</string>
    <string name="adressgarden4">916, Madeul-ro, Dobong-gu, Seoul 01318.</string>
    <string name="contactgarden4">Contact Us on :+88477888 </string>
    <string name="textgarden5">Seoul Station Rooftop Garden</string>
    <string name="detailsgarden5">This is a garden on the rooftop of Seoul Station. It has some interesting decoration. Good to take a look for minutes..</string>
    <string name="adressgarden5">916, Madeul-ro, Dobong-gu, Seoul 01318.</string>
    <string name="contactgarden5">Contact Us on :+88477888 </string>
    <string name="texttemple1">Best for a natural escape: Hwagyesa </string>
    <string name="detailstemple1">Hwagyesa Temple offers a natural escape in Seoul, surrounded by lush greenery and peaceful trails, providing a serene retreat from the city.</string>
    <string name="adresstemple1">117, Hwagyesa-gil, Suyu 1-dong, Gangbuk-gu, Seoul</string>
    <string name="contacttemple1">Contact Us on :+82-2-902-2663 </string>
    <string name="texttemple2"> Best for ancient traditions: Bongwonsa</string>
    <string name="detailstemple2">Bongwonsa Temple embodies ancient Korean Buddhist traditions through its historic rituals. It offers visitors an authentic glimpse into the heart of this cultural heritage.</string>
    <string name="adresstemple2">55 Ujeongguk-ro, Jongno-gu, Seoul</string>
    <string name="contacttemple2">Contact Us on :+82-2-768-8600 </string>
    <string name="texttemple3"> Best classic favourite: Jogyesa</string>
    <string name="detailstemple3">Jogyesa Temple is the chief temple of the Jogye Order of Korean Buddhism, located in the heart of Seoul. Its vibrant and intricately decorated main hall, Daeungjeon, houses several important Buddhist statues and artifacts. The temple serves as a central hub for Buddhist practices, ceremonies, and cultural events, offering a serene and spiritual escape amidst the bustling city. Its ancient trees and peaceful courtyards provide a tranquil atmosphere for visitors seeking contemplation and a glimpse into Korean Buddhist traditions.</string>
    <string name="adresstemple3">55 Ujeongguk-ro, Jongno-gu, Seoul</string>
    <string name="contacttemple3">Contact Us on :+82-2-768-8600 </string>
    <string name="texttemple4">Bongeunsa temple</string>
</resources>