<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82B647"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="430dp"
                android:background="@drawable/seoul"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_border"
                android:padding="16dp">




                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/textview"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/dark"
                    android:textSize="19sp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/getStarted_desp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/dark"
                    android:textAlignment="center"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_started"
                    android:backgroundTint="@color/orange"
                    android:drawableEnd='@drawable/baseline_arrow_forward_24'
                    android:id="@+id/getStarted"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" This app was created by KADRI IMANE and ARKOUB SARA | Group: 04 / SI"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/orange"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>